# ME470-Senior-Design

./: Stepper_Driver_TMC2208.py  limit_switch.py  package.xml  stepper_demo.py
config/: Robot_Gantry_Gazebo.srdf  Robot_Gantry_Gazebo.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
gantry_config/: .setup_assistant  CMakeLists.txt  gantry_digital_twin_documentation.docx
gantry_config/config/: Robot_Gantry_Gazebo.ros2_control.xacro  Robot_Gantry_Gazebo.srdf  moveit_controllers.yaml  ros2_controllers.yaml
gantry_config/launch/: moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py
gantry_description/: CMakeLists.txt  package.xml
gantry_description/launch/: controller.launch.py  gantry.launch.py  gazebo.launch  gazebo.launch.py
gantry_description/meshes/: stand_1.stl  y_axis_1.stl
gantry_description/urdf/: Robot_Gantry_Gazebo.gazebo  Robot_Gantry_Gazebo.xacro  Robot_Gantry_Gazebo_old.xacro  materials.xacro
gantry_hardware_interface/: CMakeLists.txt  gantry_hardware_interface.xml  package.xml
gantry_hardware_interface/include/gantry_hardware_interface/: gantry_hardware_interface.hpp
gantry_hardware_interface/src/: Stepper_Driver_TMC2208.cpp  Stepper_Driver_TMC2208.hpp  gantry_hardware_interface.cpp  gantry_hardware_interface.hpp
gantry_hardware_interface/test/: test_load_gantry_hardware_interface.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_gantry_config/share/ament_index/resource_index/package_run_dependencies/: robot_gantry_config
install/robot_gantry_config/share/ament_index/resource_index/parent_prefix_path/: robot_gantry_config
install/robot_gantry_config/share/robot_gantry_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_gantry_config/share/robot_gantry_config/cmake/: robot_gantry_configConfig.cmake
install/robot_gantry_config/share/robot_gantry_config/config/: Robot_Gantry_Gazebo.ros2_control.xacro  initial_positions.yaml
install/robot_gantry_config/share/robot_gantry_config/launch/: move_group.launch.py  rsp.launch.py
install/robot_gantry_description/share/ament_index/resource_index/parent_prefix_path/: robot_gantry_description
install/robot_gantry_description/share/robot_gantry_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_gantry_description/share/robot_gantry_description/launch/: controller.launch  controller.yaml
install/robot_gantry_description/share/robot_gantry_description/meshes/: End_effector_1.stl
launch/: demo.launch.py  display.launch  spawn_controllers.launch.py  warehouse_db.launch.py
log/: latest_build
meshes/: base_link.stl  z_axis_1.stl
moveit_commander/: CMakeLists.txt  package.xml
moveit_commander/src/: moveit_commander_node.cpp
urdf/: Robot_Gantry_Gazebo.trans  Robot_Gantry_Gazebo.xacro
